# mystudy

aws/: ec2_init.sh
cpp/: gauss_jordan.cpp  gauss_saidel.cpp  laplaces_equation_2d.cpp  matrix.cpp  poissons_equation_2d.cpp  smart_pointer.cpp  template_sample.cpp
cpp/data/: sample01.txt  sample02.txt  sample03.txt  sample04.txt
create_enviroment/: Dockerfile  README.md  docker-compose.yml  mambaforge-forlinux.sh  miniforge-forlinux.sh  pyproject.toml
deep-learning/: requirements.txt
medical/: conv.py  data.json  data.py  train.py
medical/data/: test.csv
polars/: LICENSE  Presentation.pptx  README.md  Synthea_data_demo.ipynb  requirements.txt  sample.py  swarmplot.bas
polars/src/: preprocess.py
